finished styling , about to start the javaScript

--- a/index.html
+++ b/index.html
@@ -47,9 +47,64 @@
                 </p>
             </div>
             <div class="form__content">
-                First Name Last Name Email Address Password Claim your free
-                trial By clicking the button, you are agreeing to our Terms and
-                Services
+                <form action="" class="form" id="form">
+                    <!-- first name -->
+                    <div class="form-control">
+                        <div class="input--wrap">
+                            <input type="text" placeholder="First Name" />
+                            <img
+                                class="alert-img"
+                                src="images/icon-error.svg"
+                                alt=""
+                            />
+                        </div>
+                        <small>First Name cannot be empty</small>
+                    </div>
+                    <!-- last name -->
+                    <div class="form-control">
+                        <div class="input--wrap">
+                            <input type="text" placeholder="Last Name" />
+                            <img
+                                class="alert-img"
+                                src="images/icon-error.svg"
+                                alt=""
+                            />
+                        </div>
+                        <small>Last Name cannot be empty</small>
+                    </div>
+                    <!-- email -->
+                    <div class="form-control">
+                        <div class="input--wrap">
+                            <input type="text" placeholder="Email Address" />
+                            <img
+                                class="alert-img"
+                                src="images/icon-error.svg"
+                                alt=""
+                            />
+                        </div>
+                        <small>Looks like this is not an email</small>
+                    </div>
+                    <!-- password -->
+                    <div class="form-control">
+                        <div class="input--wrap">
+                            <input type="text" placeholder="Password" />
+                            <img
+                                class="alert-img"
+                                src="images/icon-error.svg"
+                                alt=""
+                            />
+                        </div>
+                        <small>Password cannot be empty</small>
+                    </div>
+                </form>
+
+                <div class="form-footer">
+                    <button class="trial-btn">CLAIM YOUR FREE TRIAL</button>
+                    <p class="form-footer__p">
+                        By clicking this button you are agreeing to our
+                        <a href="#">Terms and Services</a>
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -63,5 +118,7 @@
                 >. Coded by <a href="#">Your Name Here</a>.
             </p>
         </footer> -->
+
+        <script src="script.js"></script>
     </body>
 </html>
