finished / going to re-organize and add comments

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <!-- password -->
                     <div class="form-control">
                         <div class="input--wrap">
-                            <input type="text" placeholder="Password" />
+                            <input type="password" placeholder="Password" />
                             <img
                                 class="alert-img"
                                 src="images/icon-error.svg"
@@ -99,7 +99,7 @@
                 </form>
 
                 <div class="form-footer">
-                    <button class="trial-btn">CLAIM YOUR FREE TRIAL</button>
+                    <button id="trial-btn">CLAIM YOUR FREE TRIAL</button>
                     <p class="form-footer__p">
                         By clicking this button you are agreeing to our
                         <a href="#">Terms and Services</a>
