--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <!-- email -->
                     <div class="form-control">
                         <div class="input--wrap">
-                            <input type="text" placeholder="Email Address" />
+                            <input type="email" placeholder="Email Address" />
                             <img
                                 class="alert-img"
                                 src="images/icon-error.svg"
@@ -99,7 +99,9 @@
                 </form>
 
                 <div class="form-footer">
-                    <button id="trial-btn">CLAIM YOUR FREE TRIAL</button>
+                    <button id="trial-btn" type="submit">
+                        CLAIM YOUR FREE TRIAL
+                    </button>
                     <p class="form-footer__p">
                         By clicking this button you are agreeing to our
                         <a href="#">Terms and Services</a>
